<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <EditText
        android:id="@+id/loginEmailInput"
        android:layout_width="293dp"
        android:layout_height="60dp"
        android:layout_marginTop="352dp"
        android:ems="10"
        android:hint="enter email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginPasswordInput"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="enter password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/loginEmailInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginEmailInput"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailInput" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="292dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/login_title"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="290dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/Login_btn_text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/loginPasswordInput"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/loginPasswordInput"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordInput" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/create_new_account_link_text"
        app:layout_constraintEnd_toStartOf="@+id/signUpLink"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <TextView
        android:id="@+id/signUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="124dp"
        android:text="@string/sign_up_text_in_login"
        android:textColor="#253AE0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="116dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pixelforgelogodark" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="59dp"
        android:text="@string/forgot_password_text"
        android:textColor="#3851D9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordInput" />
</androidx.constraintlayout.widget.ConstraintLayout>