<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignupActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="190dp"
        android:layout_height="105dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pixelforgelogodark" />

    <EditText
        android:id="@+id/signupNameInput"
        android:layout_width="293dp"
        android:layout_height="60dp"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:hint="enter name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/confirmPasswordInput"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="re-enter password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/signupEmailInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signupEmailInput"
        app:layout_constraintTop_toBottomOf="@+id/signupPasswordInput" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/already_have_an_account_txt"
        app:layout_constraintEnd_toStartOf="@+id/signInLink"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupBtn" />

    <EditText
        android:id="@+id/signupPasswordInput"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="enter password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/signupEmailInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signupEmailInput"
        app:layout_constraintTop_toBottomOf="@+id/signupEmailInput" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="256dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/signup_title"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signInLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="116dp"
        android:text="@string/signIn_text_link"
        android:textColor="#253AE0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupBtn" />

    <EditText
        android:id="@+id/signupEmailInput"
        android:layout_width="293dp"
        android:layout_height="60dp"
        android:layout_marginTop="368dp"
        android:ems="10"
        android:hint="enter email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="290dp"
        android:layout_height="52dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/signup_button_text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/signupPasswordInput"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/signupPasswordInput"
        app:layout_constraintTop_toBottomOf="@+id/signupPasswordInput" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:text="@string/password_requirement_text"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.715"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>